--- a/stil.css
+++ b/stil.css
@@ -68,12 +68,13 @@ li.active{
 	clear:both;
 	text-align:center;
 	border-top:2px solid #E8E8E8;
+	font-family:Ubuntu;
 }
 
 .novost {
 	margin-top:50px;
 	padding-bottom: 2em;
-	border-bottom: 2px solid #E8E8E8;
+	margin-bottom:10px;
 }
 
 .novost p {
@@ -99,7 +100,7 @@ li.active{
 	text-align:center;
 	margin-top:30px;
 	padding-bottom:2em;
-	border-bottom:2px solid #E8E8E8;
+	border-bottom:1px solid #E8E8E8;
 }
 #podstranice p{
 	color:#404040;
