--- a/stil.css
+++ b/stil.css
@@ -130,3 +130,18 @@ li a:hover{
 	text-decoration:underline;
 	color:red;
 }
+table{
+	border:1px;
+	width:700px;
+	table-layout:fixed;
+}
+table caption{
+	font-family:Orbitron;
+}
+table tr{
+	background-color:#B8B8B8;
+	text-align:center;
+}
+table th{
+	background-color:#FFDAB9;
+}
