--- a/stil.css
+++ b/stil.css
@@ -3,6 +3,7 @@
 @import url(http://fonts.googleapis.com/css?family=Oxygen);
 @import url(http://fonts.googleapis.com/css?family=Orbitron);
 @import url(http://fonts.googleapis.com/css?family=Ubuntu);
+
 #okvir{
 	width:960px;
 	margin:0 auto;
@@ -77,6 +78,9 @@ li.active{
 	border-bottom: 1px solid #E8E8E8;
 	margin-bottom:10px;
 }
+.novost:last-child {
+	border-bottom: none;
+}
 
 .novost p {
 	font-family:Ubuntu;
@@ -86,6 +90,9 @@ li.active{
 }
 .novost h4{
 	font-family:Orbitron;
+}
+.novost{
+	font-family:Ubuntu;
 }
 #ikone{
 	text-align:center;
@@ -123,6 +130,9 @@ li.active{
 li a{
 	display:block;
 }
+li a:visited {
+	color: #808080;
+}
 li a:link{
 	text-decoration:none; 
 }
@@ -135,13 +145,56 @@ table{
 	width:700px;
 	table-layout:fixed;
 }
-table caption{
-	font-family:Orbitron;
-}
 table tr{
 	background-color:#B8B8B8;
 	text-align:center;
+	font-family:Ubuntu;
 }
 table th{
 	background-color:#FFDAB9;
+	font-family:Ubuntu;
 }
+fieldset{
+	width:340px;
+	font-family:Ubuntu;
+	background-color:#E8E8E8;
+	border:2px solid #FFDAB9;
+	color:#404040;
+	padding: 1em;
+}
+
+label{
+	display:block;
+	letter-spacing:2px;
+	margin-bottom: 5px;
+}
+input[type="text"]{
+	font-family:Orbitron;
+	width: 96%;
+	height:30px;
+	padding: 5px;
+	border:1px solid #404040;
+	border-radius:5px;
+	margin-bottom: 10px;
+}
+
+textarea{
+	font-family:Orbitron;
+	width: 98%;
+	height:100px;
+	padding:2px;
+	margin-bottom:10px;
+	border:1px solid #404040;
+	border-radius:5px;
+}
+input[type="submit"]{
+	display:block;
+	border:2px solid #B8B8B8;
+	background-color:#404040;
+	font-family:Ubuntu;
+	width:100px;
+	height:35px;
+	border-radius:5px;	
+}
+
+
