--- a/stil.css
+++ b/stil.css
@@ -31,27 +31,28 @@
 	margin-top: 0;
 	right:0;
 }
-#meni{
+nav{
 	background-color:#404040;
 	padding: 0;
 }
-#meni ul{
+nav ul{
     text-align: center;
     padding: 0;
     margin: 0;
 }
-#meni ul li{
+nav ul li{
 	display: inline-block;
 	margin: 0 2em;
 	padding: 10px 10px;
 }
-#meni ul li a{
+nav ul li a{
 	font-family:Oxygen;
 	color:#F0FFFF;
 	text-decoration:none;
 }
 li.active{
 	background-color:#A0A0A0;
+
 }
 #glavni{
 	width:75%;
@@ -127,16 +128,16 @@ li.active{
 	font-family:Ubuntu;
 	font-size:20px;
 }
-li a{
+#podstranice li a{
 	display:block;
 }
-li a:visited {
-	color: #808080;
+#podstranice li a:visited {
+	color: #707070;
 }
-li a:link{
+#podstranice li a:link{
 	text-decoration:none; 
 }
-li a:hover{
+#podstranice li a:hover{
 	text-decoration:underline;
 	color:red;
 }
