--- a/stil.css
+++ b/stil.css
@@ -209,7 +209,7 @@ textarea{
 	border:1px solid #404040;
 	border-radius:5px;
 }
-input[type="submit"]{
+button[type="button"]{
 	display:block;
 	border:2px solid #B8B8B8;
 	background-color:#404040;
